--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@ permalink: /contact/
 ---
 
 <div class="py2">
-  <form action="https://getsimpleform.com/messages?form_api_token=<29c20097735ad027758a78d226ffad77>" method="post">
-  <input type='hidden' name='redirect_to' value='http://tkruml.github.io/?contact=true' />
+  <form action="https://getsimpleform.com/messages?form_api_token=<29c20097735ad027758a78d226ffad77>" method="post" class= 'form-stacked form-light'>
+  <input type='hidden' name='redirect_to' value='http://tkruml.github.io/?contact=true'/>
     <input type="text" name="email" class="input mobile-block" placeholder="Email Address">
     <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?"></textarea>
     <input type="submit" class="button button-blue button-big mobile-block" value="Say Hello">
